tcw3/designer/tests/bad/input_inline_unsyntactic.tcwdl
pub comp crate::Comp2 {
    const wm: tcw3_pal::Wm { pub set; }

    wire wire1: u32 = get!(@@@);
    //~^ ERROR expected identifier
}
